--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Puk Puk Online</title>
 </head>
 <body>
-    
+    <button type="button" onclick="pukPuk()">puk puk</button>
+
     <script src="script.js"></script>
 </body>
 </html>
