--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Puk Puk Online</title>
 </head>
 <body>
-    <button type="button" onclick="pukpuk()">puk puk</button>
+    <button id="pukpukButton" type="button" onclick="handleSubmitPukpuk()">puk puk</button>
+    <ul id="pukpuks">
+    </ul>
 
+    <script src="https://cdn.socket.io/4.2.0/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
