--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <main class="px-8 pb-8 min-h-screen w-screen flex flex-col items-center bg-blue-100">
+    <main class="p-8 min-h-screen w-screen flex flex-col items-center bg-blue-100">
         <input
             id="pukpukSender"
             type="text"
             placeholder="Masukkan nama Anda"
-            class="mt-16 w-full shadow-lg bg-white rounded-3xl px-8 py-4 text-xl font-bold text-center"
+            class="w-full shadow-lg bg-white rounded-3xl px-8 py-4 text-xl font-bold text-center"
         >
         <button
             id="pukpukButton"
